fix: save disconnected doctors to respository, remove hideAllDoctorsMethod, refactor implementation, clean up code smells
TIS21-5602: handle disconnection when gmc last updated date time is before the request time